# let-it-snow

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LIS.remote.cmake  README.md  ci.cmake  otb-module.cmake
.ci/: ci.cmake
app/: CMakeLists.txt  build_json.py  maroc.qgs  otbComputeNbPixels.cxx  otbComputeSnowLine.cxx  otbComputeSnowMask.cxx  param_extract_maroc.json  param_full_maroc.json  runBatch_Landsat8.sh  runBatch_Take5.sh  runLis.sh  run_cloud_removal.py  run_snow_annual_map.py  run_snow_detector.py  s2snow.py
code/: CMakeLists.txt  compute_zs.cxx  compute_zs.h  compute_zs_ext.cxx  main.cxx  main2.cxx  otbStreamingHistogramMaskedVectorImageFilter.txx
config/: param_cloudremoval_template.json  param_extract_maroc.json  param_full_Landsat8_template.json  param_full_Take5_template.json  param_full_maroc.json  param_s2.json  param_test.json  param_test_preprocessing_landsat.json  param_test_s2.json  template.xml
doc/: actions.org  metadata.xsd  snow_annual_map.md  snow_annual_map_schema.json
doc/atbd/: ATBD_CES-Neige.tex  page_titre.tex  schema.json
doc/atbd/include/: castest_CESneige.tex.backup
doc/tex/: ATBD_CES-Neige.aux  ATBD_CES-Neige.out  ATBD_CES-Neige.tex  ATBD_CES-Neige.tex.backup  ATBD_CES-Neige.toc  page_titre.tex  schema.json
doc/tutorials/: lis_from_maja.md  lis_from_sen2cor.md  prepare_snow_annual_map_data.md
hpc/: LIS_SEB_style_OTB.txt  batch_compute_NOBS.sh  batch_compute_PSL.sh  batch_compute_SOD_SMOD.sh  build_module.sh  compute_NOBS.py  compute_PSL.py  compute_SOD_SMOD.py  makeTCDforLIS.sh  makefigureTile_lis_Sentinel2_cluster_muscate.sh  prepare_data_for_snow_annual_map.py  prepare_data_for_snow_monthly_map.py  runTile_lis_Sentinel2_cluster_muscate_anytile.sh  runTile_lis_Sentinel2_cluster_muscate_anytile_anydate.sh  runTile_lis_Sentinel2_datalake_anytile.sh  runTile_lis_Sentinel2_datalake_anytile_anydate.sh  run_cloud_removal_cluster.sh  run_lis_cluster.sh  run_lis_from_filelist.sh  run_snow_annual_map.sh  selectNeigeSyntheseMultitemp.csv
hpc/old/: run_lis_cluster.sh  run_lis_s2_cluster.sh
include/: histo_utils.h  itkNarySnowMaskImageFilter.h
legacy/app/: runLis.sh  runLis_griz.sh
legacy/config/: param_cloudremoval_template.json  param_extract_maroc_cluster.json  param_full_Take5_template.json  param_full_maroc.json  param_test.json  s2_n2a_format.txt
legacy/test/: histo_utils_test.cxx
python/: CMakeLists.txt  s2snow.py  setup.py  setup.py.in
python/s2snow/: #cloud_removal.py#  app_wrappers.py  cloud_builder.py  cloud_removal.py  dem_builder.py  findRefCandidates.py  format_output.py  s2snow.py  snow_annual_map.py  snow_annual_map_evaluation.py  snow_detector.py  snow_multitemp.py  snow_multitemp_evaluation.py  snow_product_parser.py  utils.py
python_include/: setup.py.in
python_include/s2snow/: cloud_builder.py  snow_annual_map.py  snow_annual_map_evaluation.py  utils.py
python_src/: CMakeLists.txt  run_cloud_removal.py  run_snow_annual_map.py
scripts/: param_extract_maroc.json  prepareMask.py  runLis.sh  s2snow.py
src/: CMakeLists.txt  CMakeListst.txt  ComputeCloudMask.cxx  ComputeContours.cxx  ComputeNbPixels.cxx  ComputeSnowLine.cxx  ComputeSnowMask.cxx  cloud_mask.cxx  compute_cloud_mask.cxx  compute_snow_mask.cxx  compute_snowline.cxx  histo_utils.cxx  histo_utils.h  histo_utils_ext.cxx  itkNarySnowMaskImageFilter.h  itkUnaryCloudMaskImageFilter.h  itkunaryCloudMaskImageFilter.h  otbStreamingHistogramMaskedVectorImageFilter.h  otbStreamingHistogramMaskedVectorImageFilter.txx
src/python/: setup.py
src/python/s2snow/: app_wrappers.py  cloud_builder.py  cloud_removal.py  dem_builder.py  findRefCandidates.py  snow_annual_map.py  snow_annual_map_evaluation.py  snow_detector.py  snow_product_parser.py  utils.py
src/python/scripts/: build_json.py  run_cloud_removal.py  run_snow_annual_map.py  run_snow_detector.py
styles/: LIS_SEB_style_vector.qml  LIS_SEB_style_vector_qgis_3.4.qml  final_mask_vec.qml  readme.md  snow_simple.qml
test/: CMakeLists.txt  PythonTestDriver.py  cloud_removal_step3_test.py  cloud_removal_step4_test.py  cloud_removal_step5_test.py  histo_utils_ng_internal_test.cxx  histo_utils_ng_test.cxx  histo_utils_snow_fraction_test.cxx  histo_utils_snowline_internal_test.cxx  histo_utils_snowline_internal_test.cxx~  histo_utils_snowline_test.cxx  histo_utils_snowline_test.cxx~  histo_utils_test.cxx  itkUnaryCloudMaskImageFilterTest.cxx  otbapp_ComputeCloudMask_test.py  otbapp_ComputeSnowMask_test.py  param_test_muscate_template.json  param_test_s2_template.json  param_test_template.json  param_test_template.json.old  snow_annual_map_test.py  test_json_builder.py  test_json_builder.sh  test_s2_json_builder.sh
utils/: dem_builder.py  get_altitude_tiles.sh  postprocessing.py  preprocessing.py  profiling_pass1.5.py  projette_mnt_Landsat8_full.sh  projette_mnt_Take5_full.sh  snow_line.py
utils/doc/: actions.org
